esiea-11-2021/kubernetes/ansible/users/test4/2wheels/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twowheels
  labels:
    app: twowheels
spec:
  replicas: 3
  selector:
    matchLabels:
      app: twowheels
  template:
    metadata:
      labels:
        app: twowheels
    spec:
      containers:
      - name: twowheels
        image: bpetit/2wheel
        ports:
        - containerPort: 5001
        volumeMounts:
            - mountPath: "/var/color"
              name: colors
              readOnly: true
      volumes:
          - name: colors
            secret:
                secretName: colors
