esiea-11-2021/kubernetes/ansible/users/test4/2wheels/service.yaml
kind: Service 
apiVersion: v1 
metadata:
  name: twowheels-service 
  #labels:
  #  app.kubernetes.io/name: ingress-nginx
  #  app.kubernetes.io/part-of: ingress-nginx
spec:
  # Expose the service on a static port on each node
  # so that we can access the service from outside the cluster 
  type: ClusterIP

  # When the node receives a request on the static port (30163)
  # "select pods with the label 'app' set to 'echo-hostname'"
  # and forward the request to one of them
  selector:
    app: twowheel

  ports:
    # Three types of ports for a service
    # nodePort - a static port assigned on each the node
    # port - port exposed internally in the cluster
    # targetPort - the container port to send requests to
    - port: 5000 
      targetPort: 5000
  #selector:
  #  app.kubernetes.io/name: ingress-nginx
  #  app.kubernetes.io/part-of: ingress-nginx
