esiea-11-2021/kubernetes/ansible/users/test4/2wheels/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twowheels
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    ingress.kubernetes.io/rewrite-target: /$2
    #ingress.kubernetes.io/app-root: /
spec:
  rules:
    - host: training-k8s.b0rk.in
      http:
        paths:
          - path: /test4/twowheels(/|$)(.*)
            pathType: Prefix
            backend:
                service:
                    name: twowheels-service
                    port: 
                        number: 5000
